fixed some spacings

--- a/app/assets/stylesheets/beta.css.scss
+++ b/app/assets/stylesheets/beta.css.scss
@@ -19,6 +19,8 @@
     margin:5px;
     position:relative;
     left:115px;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 #submit {
     position:relative;
