--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -61,3 +61,9 @@ html {
 input -webkit-autofill {
     color: #2a2a2a !important;
 }
+input {
+    text-align:center;
+    margin-left:30%;
+    margin-right:50%;
+    width:300px;
+}
