--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,27 +1,3 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-body {
-    padding-right:20px;
-}
-h1 {
-    text-align:center;
-    font-family:arial black;
-}
-p {
-    text-align:center;
-}
-input {
-    text-align:center;
-    margin-left:30%;
-    margin-right:50%;
-    margin-top:20px;
-    width:300px;
-}
-.btn {
-    margin-left:42%;
-    margin-right:50%;
-    margin-top:10px;
-    width:100px;
-}
