--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 .simple_form label {
   float: left;
   width: 100px;
@@ -50,4 +51,7 @@
     position:relative;
     left:350px;
     margin-top:100px;
+}
+label {
+    text-align:center;
 }
